--- a/code/docker_compose/docker-compose.yml
+++ b/code/docker_compose/docker-compose.yml
@@ -2,24 +2,24 @@ version: '3'
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.3.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
     container_name: elasticsearch
     environment:      
       - discovery.type=single-node    
+      - xpack.security.enrollment.enabled=false
+      - xpack.security.enabled=false
     ports:
       - 9200:9200
       - 9300:9300
     
   db:
-    image: mariadb
-    container_name: db
+    image: postgres:16.2-alpine3.19
     environment:
-      - MYSQL_USER=user1
-      - MYSQL_PASSWORD=password1
-      - MYSQL_DATABASE=mydb
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+      - POSTGRES_USER=user1
+      - POSTGRES_PASSWORD=password1
+      - POSTGRES_DB=mydb
     ports:
-      - 3306:3306
+      - 5432:5432
 
   web:
     build: .
