--- a/code/docker_compose/requirements.txt
+++ b/code/docker_compose/requirements.txt
@@ -1,4 +1,4 @@
-flask==2.2.2
-elasticsearch==7.0.0
-SQLAlchemy==2.0.7
-mariadb==1.0.2
+flask==3.0.2
+elasticsearch==8.12.1
+SQLAlchemy==2.0.28
+psycopg[binary]==3.1.18 
